# mdhavers

./: Cargo.toml  GEMINI.md  Makefile  README.md  agents.md  analyze_coverage.py  build.rs  tarpaulin-report.json  test_class_call.js
.cargo/: config.toml
.claude/: ralph-loop.local.md
assets/audio/: README.md  (+1 more)
benchmarks/: README.md  run_benchmarks.sh
docs/: audio.md  book.toml
editor/: mdhavers.tmLanguage.json
examples/: adventure.braw  argparse_demo.braw  ascii_art_demo.braw  ascii_art_demo.js  assert_demo.braw  benchmark.braw  bubblesort.braw  build_all.sh  ceilidh.braw  chance_demo.braw  classes.braw  cli_demo.braw  collections_demo.braw  colors_demo.braw  config_demo.braw  control_flow.braw  creels.braw  crypto_demo.braw  dates_demo.braw  datetime_demo.braw  defaults.braw  destructure.braw  dungeon_crawler.braw  events_demo.braw  file_io.braw  fizzbuzz.braw  fsm_demo.braw  fstrings.braw  functional.braw  functional_demo.braw  functions.braw  game_demo.braw  game_of_life.braw  guessing_game.braw  haggis_adventure.braw  hangman.braw  hello.braw  hello.js  higher_order.braw  higher_order.js  (+63 more)
installer/: README.md  install.sh  uninstall.sh
playground/: Cargo.toml  README.md  build.sh
playground/src/: lib.rs
playground/web/: app.js  index.html  styles.css
runtime/: Makefile  gc_stub.c  mdh_runtime.c  mdh_runtime.h
runtime/mdh_runtime_rs/: Cargo.toml
runtime/mdh_runtime_rs/src/: audio.rs  audio_stub.rs  lib.rs  tri_engine.rs  tri_runtime.rs
src/: ast.rs  audio.rs  compiler.rs  error.rs  formatter.rs  graphics.rs  interpreter.rs  lexer.rs  lib.rs  logging.rs  main.rs  parser.rs  token.rs  tri.rs  value.rs  wasm_compiler.rs  wasm_runner.rs
stdlib/: README.md  adventure.braw  argparse.braw  ascii_art.braw  benchmark.braw  bytes.braw  chance.braw  cli.braw  collections.braw  concurrency.braw  config.braw  dates.braw  datetime.braw  event_loop.braw  fsm.braw  http.braw  json.braw  math.braw  maths.braw  matrix.braw  menus.braw  music.braw  network_real.braw  patterns.braw  poetry.braw  prelude.braw  proptesting.braw  quiz.braw  rtcp.braw  rtp.braw  scots.braw  scots_lang.braw  sip.braw  srtp.braw  statemachine.braw  strings.braw  template.braw  test.braw  testing.braw  text.braw  (+5 more)
tests/: audio_stub_coverage.rs  backend_parity.rs  cli_coverage.rs  compiler_formatter_additional_paths_coverage_only.rs  error_with_line_if_zero_coverage.rs  golden_tests.rs  interpreter_additional_paths_coverage_only.rs  interpreter_atomic_channel_unknown_handles_coverage.rs  interpreter_builtin_match_arms_coverage.rs  interpreter_bytes.rs  interpreter_circular_import.rs  interpreter_concurrency.rs  interpreter_dns_srv_naptr.rs  interpreter_dns_stubbed_coverage_only.rs  interpreter_dtls.rs  interpreter_env_log_filter_coverage.rs  interpreter_event_loop.rs  interpreter_gap_coverage.rs  interpreter_json_additional_coverage.rs  interpreter_log_error_paths_coverage.rs  interpreter_logging_extras_callback_coverage.rs  interpreter_misc_coverage.rs  interpreter_more_logging_and_match_coverage.rs  interpreter_mutex_condvar_coverage.rs  interpreter_native_builtins_coverage.rs  interpreter_native_bytes_edge_cases_coverage.rs  interpreter_native_object_error_line_coverage.rs  interpreter_native_ok_or_branches_coverage.rs  interpreter_network.rs  interpreter_non_test_instantiations_coverage_only.rs  interpreter_range_inclusive.rs  interpreter_socket_create_failure_coverage.rs  interpreter_socket_error_branches_coverage.rs  interpreter_srtp.rs  interpreter_statement_error_paths_coverage.rs  interpreter_stats_nan_coverage.rs  interpreter_tls.rs  interpreter_tls_error_branches_coverage.rs  llvm_builtins_types_coverage.rs  llvm_codegen_additional_hotspots_coverage.rs  (+29 more)
wrk_docs/: 2025.12.06 - CC - code coverage analysis report.md  2025.12.06 - CC - coverage improvement plan.md  2025.12.07 - ralph prompt - llvm backend extension and optimization.md  2025.12.07 - ralph prompt - mdhavers installer package.md  2025.12.07 - ralph prompt - stress testing and benchmarks.md  2025.12.08 - ralph prompt - complete llvm backend stdlib.md  2025.12.08 - ralph prompt - language evaluation and benchmarking.md  2025.12.09 - llvm investigation findings.md  2025.12.09 - llvm optimization results.md  2025.12.09 - ralph prompt - large scale language evaluation.md  2025.12.09 - ralph prompt - llvm class support.md  2025.12.09 - ralph prompt - llvm deep optimization.md  2025.12.09 - ralph prompt - llvm performance optimization.md  2025.12.09 - ralph prompt - llvm phase 2 optimization.md  2025.12.09 - ralph prompt - llvm rust parity.md  2025.12.09-HLD-raw-input-llvm.md  2025.12.10 - ralph prompt - comprehensive performance optimization.md  2025.12.10 - ralph prompt - string operations optimization.md  2025.12.11 - ralph prompt - comprehensive golden test suite.md  2025.12.11 - ralph prompt - list and sieve optimization.md  2025.12.12 - ralph prompt - LLVM backend 90 percent target.md  2025.12.12 - ralph prompt - LLVM backend feature completion.md  2025.12.12 - ralph prompt - runtime logging graphics audio.md  2025.12.12 - ralph prompt - stdlib expansion.md  2025.12.13 - ralph prompt - llvm backend 100 percent.md  2025.12.13 - ralph prompt - llvm backend completion.md  2025.12.13 - ralph prompt - llvm backend fixes and full coverage.md  2025.12.13 - ralph prompt - llvm test coverage improvement.md  2025.12.13 - ralph prompt - llvm try catch implementation.md  2025.12.14 - ralph prompt - comprehensive coverage 90 percent.md  2025.12.15 - CC - code coverage analysis report.md  2025.12.15 - CC - coverage improvement plan.md  2025.12.17 - CC - code coverage analysis report.md  2025.12.17 - CC - coverage improvement plan.md  2025.12.18 - CC - code coverage analysis report.md  2025.12.18 - CC - coverage improvement plan.md  2025.12.18 - interpreter vs compiler parity plan.md  2025.12.19 - HLD - Audio All Backends.md  2025.12.19 - HLD - Audio Support WAV MP3 MIDI.md  2025.12.19 - PLN - SIP-RTP runtime implementation plan.md  (+19 more)
wrk_journals/: 2025.12.09-JRN-raw-input-implementation.md  2025.12.18 - JRN - compiler parity.md  (+4 more)
(+162 files in other folders)
