[package]
name = "mdhavers"
version = "0.1.0"
edition = "2021"
description = "A Scots programming language - pure havers, but working havers!"
authors = ["Arthur"]
license = "MIT"
readme = "README.md"
keywords = ["scots", "programming-language", "interpreter", "compiler"]

[lib]
name = "mdhavers"
path = "src/lib.rs"

[[bin]]
name = "mdhavers"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "mdhavers-lsp"
path = "src/lsp/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "llvm", "graphics", "audio"]
cli = ["clap", "rustyline", "crossterm", "dirs", "colored", "lsp-types", "lsp-server"]
llvm = ["inkwell"]
audio = ["raylib", "rustysynth"]
graphics = ["raylib"]
graphics3d = []
wasm_runner = ["wasmtime", "wat"]
# LLVM native compilation (enabled by default):
#   To disable: cargo build --no-default-features --features cli
#   Requires: sudo apt install llvm-15 libpolly-15-dev lld-15 libzstd-dev
# Graphics (raylib) - optional feature:
#   To enable: cargo build --features graphics
#   Requires: cmake, libxrandr-dev, libxinerama-dev, libxcursor-dev, libxi-dev
# Audio (raylib + MIDI) - optional feature:
#   To enable: cargo build --features audio
#   Requires: cmake, and an audio backend on the host system

[dependencies]
thiserror = "1.0"
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
libc = "0.2"
trust-dns-resolver = "0.23"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.25"
libsrtp = "0.1"
udp-dtls = { version = "0.1", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

# CLI-only dependencies (not needed for WASM)
clap = { version = "4.4", features = ["derive"], optional = true }
colored = { version = "2.1", optional = true }
rustyline = { version = "14.0", optional = true }
crossterm = { version = "0.27", optional = true }
dirs = { version = "5.0", optional = true }
lsp-types = { version = "0.97", optional = true }
lsp-server = { version = "0.7", optional = true }

# LLVM backend dependencies (optional)
# Supports LLVM 14, 15, 16, 17, 18. Change feature flag to match installed version.
# To check: apt list --installed | grep llvm-*-dev
inkwell = { version = "0.4", features = ["llvm15-0"], optional = true }

# Graphics library (optional)
raylib = { version = "5.0", optional = true }
rustysynth = { version = "1.3.6", optional = true }
wasmtime = { version = "16.0", optional = true }
wat = { version = "1.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
rcgen = "0.12"
