[package]
name = "mdhavers"
version = "0.1.0"
edition = "2021"
description = "A Scots programming language - pure havers, but working havers!"
authors = ["Arthur"]
license = "MIT"
readme = "README.md"
keywords = ["scots", "programming-language", "interpreter", "compiler"]

[lib]
name = "mdhavers"
path = "src/lib.rs"

[[bin]]
name = "mdhavers"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "mdhavers-lsp"
path = "src/lsp/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "native"]
cli = ["clap", "rustyline", "crossterm", "dirs", "colored", "lsp-types", "lsp-server"]
llvm = ["inkwell"]
llvm_comprehensive_tests = []
audio = ["miniaudio", "rustysynth"]
graphics = ["raylib"]
graphics3d = []
wasm_runner = ["wasmtime", "wat"]
native = [
    "libc",
    "trust-dns-resolver",
    "rustls",
    "rustls-pemfile",
    "webpki-roots",
    "libsrtp",
    "udp-dtls",
    "openssl",
]
# LLVM native compilation (optional):
#   To enable: cargo build --features llvm
#   Requires: sudo apt install llvm-15 libpolly-15-dev lld-15 libzstd-dev
# Graphics (raylib) - optional feature:
#   To enable: cargo build --features graphics
#   Requires: cmake, libxrandr-dev, libxinerama-dev, libxcursor-dev, libxi-dev
# Audio (miniaudio for all native/interpreter backends) - optional feature:
#   To enable: cargo build --features audio
#   Requires: an audio backend on the host system (no X11/cmake needed)

[dependencies]
thiserror = "1.0"
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
libc = { version = "0.2", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0", optional = true }
webpki-roots = { version = "0.25", optional = true }
libsrtp = { version = "0.1", optional = true }
udp-dtls = { version = "0.1", features = ["vendored"], optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

# CLI-only dependencies (not needed for WASM)
clap = { version = "4.4", features = ["derive"], optional = true }
colored = { version = "2.1", optional = true }
rustyline = { version = "14.0", optional = true }
crossterm = { version = "0.27", optional = true }
dirs = { version = "5.0", optional = true }
lsp-types = { version = "0.97", optional = true }
lsp-server = { version = "0.7", optional = true }

# LLVM backend dependencies (optional)
# Supports LLVM 14, 15, 16, 17, 18. Change feature flag to match installed version.
# To check: apt list --installed | grep llvm-*-dev
inkwell = { version = "0.4", features = ["llvm15-0"], optional = true }

# Graphics library (optional)
raylib = { version = "5.0", optional = true }
miniaudio = { package = "om-fork-miniaudio", version = "0.12.2", optional = true }
rustysynth = { version = "1.3.6", optional = true }
wasmtime = { version = "16.0", optional = true }
wat = { version = "1.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
rcgen = "0.12"

[patch.crates-io]
raylib-sys = { path = "vendor/raylib-sys-5.5.1" }
