[package]
name = "mdhavers-playground"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for mdhavers playground"
authors = ["Arthur"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# We'll link to the main mdhavers crate (without CLI features for WASM)
mdhavers = { path = "..", default-features = false }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
