[package]
name = "mdh_runtime_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
regex = "1.10"
serde_json = { version = "1.0", features = ["preserve_order"] }
trust-dns-resolver = "0.23"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.25"
libsrtp = "0.1"
udp-dtls = { version = "0.1", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }
