[package]
name = "mdh_runtime_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
default = []
audio = ["miniaudio", "rustysynth"]
graphics3d = ["wgpu", "winit", "glam", "pollster", "bytemuck"]

[dependencies]
regex = "1.10"
serde_json = { version = "1.0", features = ["preserve_order"] }
trust-dns-resolver = "0.23"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
webpki-roots = "0.25"
libsrtp = "0.1"
udp-dtls = { version = "0.1", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }
miniaudio = { package = "om-fork-miniaudio", version = "0.12.2", optional = true }
rustysynth = { version = "1.3.6", optional = true }
wgpu = { version = "0.19", optional = true }
winit = { version = "0.29", optional = true }
glam = { version = "0.27", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.24", features = ["derive"], optional = true }
